--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,15 @@ android {
         }
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile files('libs/picasso-2.3.4.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
