--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,27 @@
         android:icon="@mipmap/ic_rhplauncher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
+        <!--android:theme="@style/AppTheme"-->
         <activity android:name=".DocsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".VideoListDemoActivity" />
         <activity android:name=".CalendarActivity" />
         <activity android:name=".RadarChartActivitry" />
-        <activity
 
-            android:name=".DrawerActivity"
+        <activity android:name=".DrawerActivityDocs" />
+        <activity android:name=".DrawerActivityVideos" />
+        <activity android:name=".DrawerActivityCale" />
+
+        <activity
+            android:name=".DrawerActivityRadar"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
