--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <!--android:theme="@style/AppTheme"-->
-        <activity android:name=".DocsActivity">
-        </activity>
+        <activity android:name=".DocsActivity"></activity>
 
         <activity android:name=".VideoListDemoActivity" />
         <activity android:name=".CalendarActivity" />
@@ -24,6 +23,12 @@
         <activity android:name=".DrawerActivityDocs" />
         <activity android:name=".DrawerActivityVideos" />
         <activity android:name=".DrawerActivityCale" />
+        <activity android:name=".DrawerBrowserActivity" />
+
+        <activity
+            android:name="com.androidadvance.androidsurvey.SurveyActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".DrawerActivityRadar"
